# rust_prompt_armor

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml
benches/: patterns.rs  pipeline.rs
docs/research/: 2026-05-16-prompt-injection-defenses.md  README.md
docs/superpowers/plans/: 2026-05-16-prompt-armor-implementation.md
docs/superpowers/specs/: 2026-05-16-prompt-armor-design.md
src/: armored.rs  builder.rs  config.rs  decider.rs  error.rs  finding.rs  lib.rs  llm.rs  util.rs
src/catalog/: en.rs  mod.rs  pl.rs  ru.rs  ua.rs  zh.rs
src/layers/: encoding.rs  fence.rs  mod.rs  patterns.rs  unicode.rs
tests/: integration_builder.rs  integration_pipeline.rs  llm_attack_suite.rs  prop_encoding.rs  prop_unicode.rs
tests/common/: mod.rs
